--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -21,6 +21,11 @@ jobs:
       - name: Checkout Master
         uses: actions/checkout@v3.6.0
 
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v3.2.0
+        with:
+          dotnet-version: 9.0.x
+
       - name: Install dependencies
         run: dotnet restore
 
